Take another stab at fixing layout shifts.

--- a/assets/sass/components/settings/_googlesitekit-settings-module.scss
+++ b/assets/sass/components/settings/_googlesitekit-settings-module.scss
@@ -116,12 +116,8 @@
 			.googlesitekit-settings-module__status {
 
 				p {
-					margin: 0;
+					margin: 8px 0;
 				}
-			}
-
-			.googlesitekit-settings-module__status--connected {
-				padding: 8px 0;
 			}
 
 			.googlesitekit-settings-module__status--not-connected {
